apps/lms/lms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms
  labels:
    app: lms
spec:
  selector:
    matchLabels:
      app: lms
  template:
    metadata:
      labels:
        app: lms
    spec:
      nodeSelector:
        kubernetes.io/hostname: "jade"
      imagePullSecrets:
        - name: registry-creds
      securityContext:
        fsGroup: 100
      containers:
        - name: lms
          image: epoupon/lms
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: music
              mountPath: "/music"
              readOnly: false
            - name: config
              mountPath: "/config"
              readOnly: false
            - name: lms-persist
              mountPath: "/var/lms"
              readOnly: false
            - name: lms-ui
              mountPath: "/etc/lms/docroot"
              readOnly: false
          command: ["/usr/bin/lms", "/config/lms.conf"]
          ports:
            - name: http
              containerPort: 5082
      volumes:
        - name: music
          hostPath:
            path: /mnt/music
            type: Directory
        - name: lms-ui
          persistentVolumeClaim:
            claimName: lms-ui
        - name: lms-persist
          persistentVolumeClaim:
            claimName: lms-persist
        - name: config
          configMap:
            name: lms-config
            items:
              - key: "lms.conf"
                path: "lms.conf"
---
apiVersion: v1
kind: Service
metadata:
  name: lms
spec:
  selector:
    app: lms
  ports:
    - name: http
      port: 5082
      targetPort: 5082
